Misc stuff about NoSlim.